<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.view.SpellDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.view.SpellDetailsFragment">

        <com.onesimo.nyathi.hogwarts.ui.view.customwidget.InfoViewItemWidget
            android:id="@+id/spell_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title_text="@string/spell" />

        <com.onesimo.nyathi.hogwarts.ui.view.customwidget.InfoViewItemWidget
            android:id="@+id/is_unforgivable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spell_name"
            app:title_text="@string/unforgivable" />

        <com.onesimo.nyathi.hogwarts.ui.view.customwidget.InfoViewItemWidget
            android:id="@+id/spell_use"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/is_unforgivable"
            app:title_text="@string/use" />

        <com.onesimo.nyathi.hogwarts.ui.view.customwidget.InfoViewItemWidget
            android:id="@+id/spell_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spell_use"
            app:title_text="@string/extra_detail" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>